# cvl

./: .gitignore  README.md
cvltonemap/src/: Makefile.am  conf.cpp  conf.h  cvltonemap.cpp  cvltonemap.h  cvltonemap.qrc  err.h  import.c  import.h  main.cpp  maxabslum_selector.cpp  maxabslum_selector.h  postproc_selector.cpp  postproc_selector.h  precision_selector.cpp  precision_selector.h  tonemap_selector.cpp  tonemap_selector.h  view_area.cpp  view_area.h  viewpoint_selector.cpp  viewpoint_selector.h
cvlview/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
cvlview/build-aux/: Makefile.am  cvl.m4  glew.m4  libtool.m4  lt~obsolete.m4  qt4.m4
cvlview/doc/: Makefile.am  cvlview.1  cvlview.texi
cvlview/gllib/: Makefile.am  arcball.cpp  arcball.h  glvm-color.h  glvm-gl.h  glvm.h
cvlview/glv/: Makefile.am  glv.h  glvm.h
cvlview/glvm/: Makefile.am
cvlview/gnulib/: Makefile.am
cvlview/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
cvlview/m4/: qt4.m4
cvlview/mhlib/: Makefile.am  mh.h  mh_alloc.c  mh_alloc.h  mh_assert.h  mh_crash.c  mh_crash.h  mh_cxxstring.cpp  mh_cxxstring.h  mh_getopt.c  mh_math.c  mh_math.h  mh_msg.c  mh_msg.h  mh_os.h  mh_timer.c  mh_timer.h
cvlview/src/: Makefile.am  channel_info.cpp  channel_info.h  channel_selector.cpp  channel_selector.h  color_selector.cpp  color_selector.h  conf.cpp  conf.h  cvlview.cpp  cvlview.h  cvlview.qrc  datafile.cpp  datafile.h  dataset_selector.cpp  dataset_selector.h  err.cpp  err.h  frame_info.cpp  frame_info.h  gamma_selector.cpp  gamma_selector.h  grid_selector.cpp  grid_selector.h  heightmap_fs.glsl  heightmap_quads_vs.glsl  heightmap_selector.cpp  heightmap_selector.h  heightmap_strip_vs.glsl  image_info.cpp  image_info.h  interpolation_selector.cpp  interpolation_selector.h  main.cpp  pixel_info.cpp  pixel_info.h  pseudocolor_selector.cpp  pseudocolor_selector.h  range_selector.cpp  range_selector.h  (+12 more)
cvtool/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
cvtool/build-aux/: Makefile.am  glew.m4  ltmain.sh  ltoptions.m4  ltsugar.m4  ltversion.m4
cvtool/cvl/: Makefile.am  cvl-config.in  cvl.c  cvl.m4  cvl.pc.in  cvl_assert.c  cvl_assert.h  cvl_basic.c  cvl_blend.c  cvl_cairo.c  cvl_color.c  cvl_convolve.c  cvl_draw.c  cvl_dwt.c  cvl_edge.c  cvl_error.c  cvl_features.c  cvl_field.c  cvl_filter.c  cvl_frame.c  cvl_getopt.c  cvl_gl.c  cvl_hdr.c  cvl_init.c  cvl_intern.c  cvl_intern.h  cvl_io.c  cvl_math.c  cvl_misc.c  cvl_mix.c  cvl_msg.c  cvl_opticalflow.c  cvl_pixel.c  cvl_smooth.c  cvl_stereo.c  cvl_taglist.c  cvl_tiling_pyramid.c  cvl_transform.c  cvl_vector.c  cvl_visualization.c  (+1 more)
cvtool/cvl/cvl/: cvl.h  cvl_assert.h  cvl_basic.h  cvl_blend.h  cvl_cairo.h  cvl_color.h  cvl_convolve.h  cvl_draw.h  cvl_dwt.h  cvl_edge.h  cvl_error.h  cvl_features.h  cvl_field.h  cvl_filter.h  cvl_frame.h  cvl_getopt.h  cvl_gl.h  cvl_hdr.h  cvl_init.h  cvl_io.h  cvl_math.h  cvl_misc.h  cvl_mix.h  cvl_msg.h  cvl_opticalflow.h  cvl_pixel.h  cvl_smooth.h  cvl_stereo.h  cvl_taglist.h  cvl_tiling_pyramid.h  cvl_transform.h  cvl_vector.h  cvl_version.h.in  cvl_visualization.h  cvl_wavelets.h
cvtool/cvl/glsl/color/: channel_combine.glsl  channel_extract.glsl  color_adjust.glsl  gamma_correct.glsl  hsl_to_rgb.glsl  invert.glsl  lum_to_rgb.glsl  lum_to_xyz.glsl  luminance_range.glsl  pseudo_color.glsl  rgb_to_hsl.glsl  rgb_to_lum.glsl  rgb_to_xyz.glsl  threshold.glsl  transform_linear.glsl  transform_log.glsl  xyz_to_rgb.glsl
cvtool/cvl/glsl/dwt/: dwt_step2.glsl  idwt_step2.glsl
cvtool/cvl/glsl/features/: canny_hysterese1.glsl  canny_hysterese2.glsl  canny_nms.glsl  sobel.glsl
cvtool/cvl/glsl/filter/: convolve.glsl  convolve3d.glsl  convolve3d_separable.glsl  convolve_separable.glsl  laplace.glsl  max.glsl  max3d.glsl  median.glsl  median3d.glsl  median3d_separated.glsl  median_separated.glsl  min.glsl  min3d.glsl  (+1 more)
cvtool/cvtool/: .cvsignore  Makefile.am  cmd_affine.c  cmd_binarize.c  cmd_blend.c  cmd_channel.c  cmd_channelcombine.c  cmd_channelextract.c  cmd_color.c  cmd_combine.c  cmd_convert.c  cmd_convolve.c  cmd_create.c  cmd_cut.c  cmd_dibr.c  cmd_diff.c  cmd_draw.c  cmd_dwt.c  cmd_edge.c  cmd_edt.c  cmd_equalize.c  cmd_fieldconv.c  cmd_filter.c  cmd_flip.c  cmd_flop.c  cmd_foreach.c  cmd_gamma.c  cmd_gauss.c  cmd_grid.c  cmd_info.c  cmd_invert.c  cmd_laplace.c  cmd_layer.c  cmd_mat.c  cmd_max.c  cmd_mean.c  cmd_median.c  cmd_merge.c  cmd_min.c  cmd_mix.c  (+25 more)
cvtool/doc/: Makefile.am  cvl.texi  cvtool-example-nasa-script.sh  cvtool.1  cvtool.texi
cvtool/doc/doxy/: Makefile.am  doxyfile  doxyfile.in
cvtool/gnulib/: Makefile.am  c-strcase.h  iconv_open-aix.h  iconv_open-hpux.h  iconv_open-irix.h  iconv_open-osf.h  iconv_open-solaris.h  msvc-inval.c  pipe2.c  strpbrk.c
cvtool/gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
cvtool/m4/: glew.m4
cvtool/mhlib/: Makefile.am  mh.h  mh_alloc.h  mh_assert.h  mh_crash.c  mh_getopt.c  mh_getopt.h  mh_math.c  mh_msg.c  mh_os.c  mh_os.h  mh_string.c  mh_string.h  mh_timer.h
cvtool/notgnulib/: Makefile.am  README  c99math.c  c99math.h  fseeko.c  fseeko.h  isblank.c  isblank.h  string_to_utf8.c  string_to_utf8.h  tempfile.c  tempfile.h
cvtool/notgnulib/m4/: c99math.m4  fseeko.m4  isblank.m4  notgnulib-comp.m4
cvtool/tests/: Makefile.am  cmd_affine.sh  cmd_binarize.sh  cmd_blend.sh  cmd_channel.sh  cmd_channelcombine.sh  cmd_channelextract.sh  cmd_color.sh  cmd_combine.sh  cmd_convert.sh  cmd_convolve.sh  cmd_create.sh  cmd_cut.sh  cmd_dibr.sh  cmd_diff.sh  cmd_draw.sh  cmd_dwt.sh  cmd_edge.sh  cmd_edt.sh  cmd_equalize.sh  cmd_fieldconv.sh  cmd_filter.sh  cmd_flip.sh  cmd_flop.sh  cmd_foreach.sh  cmd_gamma.sh  cmd_gauss.sh  cmd_help.sh  cmd_info.sh  cmd_invert.sh  cmd_laplace.sh  cmd_layer.sh  cmd_mat.sh  cmd_max.sh  cmd_mean.sh  cmd_median.sh  cmd_merge.sh  cmd_min.sh  cmd_mix.sh  cmd_opticalflow.sh  (+20 more)
pgmvol/: ChangeLog  Makefile.am  NEWS  README  configure.ac
pgmvol/build-aux/: Makefile.am
pgmvol/doc/: Makefile.am  pgmtovol.1  pgmtovol.texi  voltopgm.1  voltopgm.texi
pgmvol/src/: Makefile.am  pgmtovol.c  voltopgm.c
(+249 files in other folders)
