noinst_LIBRARIES = libmh.a
libmh_a_SOURCES = \
	mh_msg.c mh_msg.h \
	mh_assert.h \
	mh_crash.c mh_crash.h \
	mh_alloc.c mh_alloc.h \
	mh_math.c mh_math.h \
	mh_getopt.c mh_getopt.h \
	mh_string.c mh_string.h \
	mh_os.c mh_os.h \
	mh_timer.c mh_timer.h \
	mh_cxxstring.cpp mh_cxxstring.h
EXTRA_DIST = mh.h
AM_CPPFLAGS = -I$(top_srcdir)/gnulib
