SUBDIRS = doxy

man_MANS = cvtool.1

info_TEXINFOS = cvl.texi cvtool.texi
cvl_TEXINFOS = cvl.texi fdl.texi gpl.texi
cvtool_TEXINFOS = cvtool.texi fdl.texi gpl.texi

AM_MAKEINFOHTMLFLAGS = --no-split

EXTRA_DIST = cvl.html cvl.pdf cvtool.html cvtool.pdf $(man_MANS)

dist_doc_DATA = cvl.html cvl.pdf cvtool.html cvtool.pdf
