noinst_LTLIBRARIES = libnotgnu.la

libnotgnu_la_SOURCES =
#libgnu_la_LIBADD = @LTLIBOBJS@
EXTRA_DIST = README
BUILT_SOURCES =
SUFFIXES =
MOSTLYCLEANFILES =
CLEANFILES =
DISTCLEANFILES =
MAINTAINERCLEANFILES =

AM_CPPFLAGS = -I$(top_srcdir)/gnulib

# c99math
libnotgnu_la_SOURCES += c99math.h c99math.c

# isblank
libnotgnu_la_SOURCES += isblank.h isblank.c

# fseeko
libnotgnu_la_SOURCES += fseeko.h fseeko.c

# tempfile
libnotgnu_la_SOURCES += tempfile.h tempfile.c

# string_to_utf8
libnotgnu_la_SOURCES += string_to_utf8.h string_to_utf8.c
