testscripts =	\
	cmd_affine.sh \
	cmd_binarize.sh \
	cmd_blend.sh \
	cmd_channel.sh \
	cmd_color.sh \
	cmd_combine.sh \
	cmd_convert.sh \
	cmd_convolve.sh \
	cmd_create.sh \
	cmd_cut.sh \
	cmd_dibr.sh \
	cmd_diff.sh \
	cmd_draw.sh \
	cmd_edge.sh \
	cmd_equalize.sh \
	cmd_filter.sh \
	cmd_flip.sh \
	cmd_flop.sh \
	cmd_foreach.sh \
	cmd_help.sh \
	cmd_info.sh \
	cmd_invert.sh \
	cmd_layer.sh \
	cmd_merge.sh \
	cmd_opticalflow.sh \
	cmd_resize.sh \
	cmd_reverse.sh \
	cmd_rotate.sh \
	cmd_scale.sh \
	cmd_sedt.sh \
	cmd_select.sh \
	cmd_shear.sh \
	cmd_split.sh \
	cmd_stereoview.sh \
	cmd_trackdepth.sh \
	cmd_vectors.sh \
	cmd_version.sh

EXTRA_DIST = cmd_tests_common.sh $(testscripts)
TESTS = $(testscripts)
