TESTS_ENVIRONMENT = \
	CVTOOL=$(top_builddir)/cvtool/cvtool \
	CVTOOL_TESTS_COMMON=$(top_srcdir)/tests/cmd_tests_common.sh

testscripts = \
	cmd_affine.sh		\
	cmd_blend.sh		\
	cmd_channelcombine.sh	\
	cmd_channelextract.sh	\
	cmd_color.sh		\
	cmd_combine.sh		\
	cmd_convert.sh		\
	cmd_convolve.sh		\
	cmd_create.sh		\
	cmd_cut.sh		\
	cmd_diff.sh		\
	cmd_draw.sh		\
	cmd_dwt.sh		\
	cmd_edge.sh		\
	cmd_flip.sh		\
	cmd_flop.sh		\
	cmd_foreach.sh		\
	cmd_gamma.sh		\
	cmd_gauss.sh		\
	cmd_help.sh		\
	cmd_info.sh		\
	cmd_invert.sh		\
	cmd_laplace.sh		\
	cmd_layer.sh		\
	cmd_max.sh		\
	cmd_mean.sh		\
	cmd_median.sh		\
	cmd_merge.sh		\
	cmd_min.sh		\
	cmd_mix.sh		\
	cmd_resize.sh		\
	cmd_reverse.sh		\
	cmd_rotate.sh		\
	cmd_scale.sh		\
	cmd_select.sh		\
	cmd_shear.sh		\
	cmd_split.sh		\
	cmd_tonemap.sh		\
	cmd_unsharpmask.sh	\
	cmd_version.sh		\
	cmd_visualize.sh

EXTRA_DIST = cmd_tests_common.sh $(testscripts)
TESTS = $(testscripts)
